--- a/Practice_Lists.ipynb
+++ b/Practice_Lists.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfq9G2h2eYC2Pf7UDQaX3N",
+      "authorship_tag": "ABX9TyP0vLRTwXScqZKRGpmspGiU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -488,6 +488,211 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Working with Lists (For Loop)**"
+      ],
+      "metadata": {
+        "id": "f1IP500LYt_a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "friends = ['Saga', 'Sanju', 'Raju', 'Bhagu', 'Pappu', 'Amol', 'Vicky', 'Rocky']\n",
+        "for friend in friends:\n",
+        "  print (f\"{friend.title()}, are you there my friends ?\")\n"
+      ],
+      "metadata": {
+        "id": "l0744aLkYtu3",
+        "outputId": "67964ef4-2877-43fa-af36-290cef0fb2ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saga, are you there my friends ?\n",
+            "Sanju, are you there my friends ?\n",
+            "Raju, are you there my friends ?\n",
+            "Bhagu, are you there my friends ?\n",
+            "Pappu, are you there my friends ?\n",
+            "Amol, are you there my friends ?\n",
+            "Vicky, are you there my friends ?\n",
+            "Rocky, are you there my friends ?\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "friends = ['Saga', 'Sanju', 'Raju', 'Bhagu', 'Pappu', 'Amol', 'Vicky', 'Rocky']\n",
+        "for friend in friends:\n",
+        "  print (f\"{friend.title()}, are you there my friends ?\")\n",
+        "  print (f\"{friend.title()}, you are a good friend of mine\")"
+      ],
+      "metadata": {
+        "id": "BYRU8uKU-AXH",
+        "outputId": "a8b2d714-f0b9-4854-f81d-f646452c2d5a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saga, are you there my friends ?\n",
+            "Saga, you are a good friend of mine\n",
+            "Sanju, are you there my friends ?\n",
+            "Sanju, you are a good friend of mine\n",
+            "Raju, are you there my friends ?\n",
+            "Raju, you are a good friend of mine\n",
+            "Bhagu, are you there my friends ?\n",
+            "Bhagu, you are a good friend of mine\n",
+            "Pappu, are you there my friends ?\n",
+            "Pappu, you are a good friend of mine\n",
+            "Amol, are you there my friends ?\n",
+            "Amol, you are a good friend of mine\n",
+            "Vicky, are you there my friends ?\n",
+            "Vicky, you are a good friend of mine\n",
+            "Rocky, are you there my friends ?\n",
+            "Rocky, you are a good friend of mine\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "friends = ['Saga', 'Sanju', 'Raju', 'Bhagu', 'Pappu', 'Amol', 'Vicky', 'Rocky']\n",
+        "for friend in friends:\n",
+        "  print (f\"{friend.title()}, are you there my friends ?\")\n",
+        "print (f\"{friend.title()}, you are a good friend of mine\")"
+      ],
+      "metadata": {
+        "id": "otQomwupGwqE",
+        "outputId": "de02e428-0b4e-4d39-c6da-2a20627bec29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saga, are you there my friends ?\n",
+            "Sanju, are you there my friends ?\n",
+            "Raju, are you there my friends ?\n",
+            "Bhagu, are you there my friends ?\n",
+            "Pappu, are you there my friends ?\n",
+            "Amol, are you there my friends ?\n",
+            "Vicky, are you there my friends ?\n",
+            "Rocky, are you there my friends ?\n",
+            "Rocky, you are a good friend of mine\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**TRY IT YOURSELF**"
+      ],
+      "metadata": {
+        "id": "m90QVffhKgNE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pizzas = ['margareeta', 'onion capsicum', 'paneer', 'pasta']\n",
+        "for pizza in pizzas:\n",
+        "    print(f\"I love {pizza.title()}\")"
+      ],
+      "metadata": {
+        "id": "_1Xe9UgQHsye",
+        "outputId": "4512fcb2-cdc4-41aa-9897-b66376ea5e6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I love Margareeta\n",
+            "I love Onion Capsicum\n",
+            "I love Paneer\n",
+            "I love Pasta\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "animals = ['dog', 'cat', 'deer', 'lion']\n",
+        "lgth= len(animals)\n",
+        "print(lgth)\n",
+        "for l in animals:\n",
+        "    print(f\"{l} would make a good pet\")\n",
+        "print ('Any of these animals would make a great pet')\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JZCDLK9Scxsi",
+        "outputId": "358d1a5c-d106-4dae-ea25-0e7eddf9e12f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "dog would make a good pet\n",
+            "cat would make a good pet\n",
+            "deer would make a good pet\n",
+            "lion would make a good pet\n",
+            "Any of these animals would make a great pet\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yUihxLRdjVVI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FwA2J17oKjBg"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
