--- a/Practice_range_Lists.ipynb
+++ b/Practice_range_Lists.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMutgmraAoX6OvNTqbLJ94S",
+      "authorship_tag": "ABX9TyNeV5EUDBeqNQ2hfkxjZkcb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,51 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Jack88007/Jack88007/blob/main/Practice_range_Lists.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**first_numbers.py**"
+      ],
+      "metadata": {
+        "id": "nXcch5PAHA-q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "for values in range (1,13):\n",
+        "  print (list(range(1,13)))"
+      ],
+      "metadata": {
+        "id": "bvGTPyUhHEz_",
+        "outputId": "b505dfee-4884-4ee1-ee7b-d2b0b677b4fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n"
+          ]
+        }
       ]
     }
   ]
