--- a/Practice_Example.ipynb
+++ b/Practice_Example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQ94+ziItj/pghLY/gD3r8",
+      "authorship_tag": "ABX9TyObaD967XF54LhkiOmdrX/h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -233,7 +233,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +292,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,6 +311,86 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Working Example Project**"
+      ],
+      "metadata": {
+        "id": "JjuP3HjfDrNf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "shopping_list = [\"egg\", \"milk\", \"bread\", \"apples\", \"bananas\"] \n",
+        "\n",
+        "# Print out the list\n",
+        "print(\"My shopping list:\")\n",
+        "# Check if an item is on the list\n",
+        "item_to_find = input(f'Enter the item to be found : ')\n",
+        "if item_to_find in shopping_list:\n",
+        "    print(f\"{item_to_find} is on the list\")\n",
+        "else:\n",
+        "    print(f\"{item_to_find} is not on the list\")\n",
+        "# Add an item to the list\n",
+        "    new_item = input(f'Do you want to add {item_to_find} to the list? (Y/N)')\n",
+        "    if new_item == \"Y\":\n",
+        "      shopping_list.append(item_to_find)\n",
+        "    print(f\"{new_item} has been added to the list.\")\n",
+        "\n",
+        "# Remove an item from the list\n",
+        "item_to_remove = input(f'Enter the item to be removed : ')\n",
+        "if item_to_remove in shopping_list:\n",
+        "  print(f\"{item_to_remove} is on the list\")\n",
+        "  shopping_list.remove(item_to_remove)\n",
+        "  print(f\"{item_to_remove} has been removed from the list.\")\n",
+        "  print(f\"New list is {shopping_list}\")\n",
+        "else:\n",
+        "  print(f\"{item_to_remove} is not on the list\")\n",
+        "\n",
+        "\n",
+        "# Sort the list\n",
+        "\n",
+        "shopping_list.sort()\n",
+        "print(\"The shopping list has been sorted.\")\n",
+        "print(shopping_list)\n"
+      ],
+      "metadata": {
+        "id": "G24f0frXDqxZ",
+        "outputId": "4e35bc0f-0ed4-4aaf-e4ef-da41fe048618",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "My shopping list:\n",
+            "Enter the item to be found : Honey\n",
+            "Honey is not on the list\n",
+            "Do you want to add Honey to the list? (Y/N)Y\n",
+            "Y has been added to the list.\n",
+            "Enter the item to be removed : EGG\n",
+            "EGG is not on the list\n",
+            "The shopping list has been sorted.\n",
+            "['Honey', 'apples', 'bananas', 'bread', 'egg', 'milk']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1qUnk8unD0Xx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
